build: add skip-check option and clean up TypeScript config files

--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,8 +1,8 @@
 {
   "extends": "./tsconfig.app.json",
   "exclude": [],
+  "include": ["src/**/__tests__/*"],
   "compilerOptions": {
-    "composite": true,
     "lib": [],
     "types": ["node", "jsdom"]
   }
